# frankenstein-player

./: .gitignore  CMakeLists.txt  FOR COLLABORATORS.md  README.md
config/: frankenstein.config.example.json  frankenstein_schema.sql
design/: diagrama-ER.dia
docs/: Doxyfile
docs/output/latex/: Album_8hpp.tex  Album_8hpp__dep__incl.dot  Album_8hpp__incl.dot  Album_8hpp_source.tex  Artist_8hpp.tex  Artist_8hpp__incl.dot  Artist_8hpp_source.tex  EntitiesFWD_8hpp.tex  EntitiesFWD_8hpp__dep__incl.dot  EntitiesFWD_8hpp_source.tex  Entity_8hpp.tex  Entity_8hpp__dep__incl.dot  Entity_8hpp_source.tex  HistoryPlayback_8hpp.tex  HistoryPlayback_8hpp__incl.dot  HistoryPlayback_8hpp_source.tex  Player_8hpp.tex  Player_8hpp__incl.dot  Player_8hpp_source.tex  Playlist_8hpp.tex  Playlist_8hpp__dep__incl.dot  Playlist_8hpp__incl.dot  Playlist_8hpp_source.tex  Song_8hpp.tex  Song_8hpp__dep__incl.dot  Song_8hpp__incl.dot  Song_8hpp_source.tex  User_8hpp.tex  User_8hpp__incl.dot  User_8hpp_source.tex  annotated.tex  classPlayer.tex  classcore_1_1Album.tex  classcore_1_1Album__inherit__graph.dot  classcore_1_1Artist.tex  classcore_1_1Entity.tex  classcore_1_1Entity__inherit__graph.dot  classcore_1_1HistoryPlayback.tex  classcore_1_1HistoryPlayback__inherit__graph.dot  classcore_1_1Playlist.tex  (+14 more)
include/cli/: Cli.hpp
include/core/bd/: AccountSecurityContract.hpp  AlbumRepository.hpp  ArtistRepository.hpp  DatabaseManager.hpp  Entity.hpp  HistoryPlaybackRepository.hpp  IRepository.hpp  PlaylistRepository.hpp  RepositoryFactory.hpp  SQLiteRepositoryBase.hpp  SongRepository.hpp  UserRepository.hpp
include/core/entities/: Album.hpp  Artist.hpp  Entity.hpp  HistoryPlayback.hpp  Player.hpp  Playlist.hpp  Song.hpp  User.hpp
include/core/interfaces/: ICollection.hpp  IPlayable.hpp  IPlayableObject.hpp  IRepository.hpp
include/core/services/: ConfigManager.hpp  FilesManager.hpp  Library.hpp  Loader.hpp  Manager.hpp  PlaybackQueue.hpp  Player.hpp  UsersManager.hpp
include/core/util/: Datetime.hpp  UnicodeHelper.hpp
resources/: help.json
src/: main.cpp  testMusic.cpp
src/cli/: Cli.cpp  cli.cpp
src/core/: dummy.cpp
src/core/bd/: AlbumRepository.cpp  ArtistRepository.cpp  DatabaseManager.cpp  HistoryPlaybackRepository.cpp  PlaylistRepository.cpp  SQLiteRepositoryBase.tpp  SongRepository.cpp  UserRepository.cpp
src/core/entities/: Album.cpp  Artist.cpp  Entity.cpp  Playlist.cpp  Song.cpp  User.cpp
src/core/services/: ConfigManager.cpp  FilesManager.cpp  Library.cpp  Manager.cpp  PlayblackQueue.cpp  Player.cpp  UsersManager.cpp
src/core/util/: Datetime.cpp  UnicodeHelper.cpp
tests/acceptance/: TestUserManager.cpp  testPlaylistAcceptance.cpp  test_music.main.cpp  test_music_organization.cpp  test_music_play_acceptance.cpp  test_music_queue_acceptance.cpp  test_playlist_acceptance.cpp
tests/config/: test.config.json
tests/fixtures/: ConfigFixture.hpp  DatabaseFixture.hpp  MediaFixture.hpp  PlaybackQueueFixture.hpp  PlaybackTestFixture.hpp  UserFixture.cpp  UserFixture.hpp  UserFixure.cpp
tests/fixtures/config/: test.config.json
tests/mocks/: MockPlayable.hpp
tests/unit/bd/: TestSongRepository.cpp  TestUserRepository.cpp
tests/unit/entities/: TestAlbum.cpp  TestArtist.cpp  TestPlaylist.cpp  TestSong.cpp  TestUser.cpp
tests/unit/services/: TestPlaybackQueue.cpp
